# PolyLife

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
core/: auth_views.py  jwt_utils.py  urls.py
core/tests/: test_home.py  test_jwt_utils.py  test_refresh.py  test_seed_users.py
polylife/: settings.py
scripts/: generate_teams.ps1  start-core.ps1  start-core.sh  start-team.ps1  start-team.sh
scripts/bash/: start-core.sh
scripts/windows/: start-core.ps1
teams/: GETTING_STARTED.md  README.md
teams/_template/: .env.example  Dockerfile  README.md  apps.py  docker-compose.yml  gateway.conf  models.py  run.ps1  run.sh  urls.py  (+1 more)
teams/team7/backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
teams/team7/backend/alembic/: env.py
teams/team7/backend/alembic/versions/: 0001_initial_schema.py
teams/team7/backend/app/: main.py
teams/team7/backend/app/api/: chat.py  meta.py  reserve.py
teams/team7/backend/app/core/: config.py  db.py  security.py
teams/team7/backend/app/models/: __init__.py  appointment.py  base.py  chat_message.py  chat_thread.py  coach_availability.py  coach_profile.py  coach_rating.py  message_attachment.py
teams/team7/backend/app/schemas/: chat.py  reserve.py
teams/team7/backend/app/services/: chat.py  reserve.py
teams/team7/backend/app/tests/: conftest.py  test_chat_threads.py  test_health.py  test_models.py  test_reserve_appointments.py  test_reserve_availability.py  test_reserve_coaches.py  test_reserve_ratings.py  test_security.py
(+140 files in other folders)
